add optional OAuth2 security
