# app.py
@@ -3,6 +3,7 @@ import connexion
 import datetime
 import flask
 import logging
+import os
 
 
 # our memory-only pet storage
@@ -43,6 +44,8 @@ def delete_pet(pet_id):
 
 if __name__ == '__main__':
     logging.basicConfig(level=logging.INFO)
+    # the following line is only needed for OAuth support
+    api_args = {'tokeninfo_url': os.environ.get('HTTP_TOKENINFO_URL')}
     app = connexion.App(__name__, port=8080, debug=True, server='gevent')
-    app.add_api('swagger.yaml')
+    app.add_api('swagger.yaml', arguments=api_args)
     app.run()
